# Data_Science_be_like

./: .gitignore  Deep_Learning.ipynb  Dynamic.py  Intro_ML.ipynb  NeuralNetwork.py  Pandas_101.ipynb  Projection.md  README.md  Reforcado.ipynb  TODO.md  cumult2.py  mult.py  obsidian-ml-spec.md  pyproject.toml  test_delaunay.py  triangulacao_aleatoria.txt  triangulacao_simples.txt
.claude/: settings.local.json
.obsidian/: appearance.json  community-plugins.json  graph.json
.obsidian/plugins/jupymd/: data.json
.obsidian/plugins/typst/: data.json
.obsidian/snippets/: linespacing.css
Excalidraw/: Cloud_Basic.excalidraw.md  Drawing 2026-02-25 19.13.29.excalidraw.md
code/: laml.ipynb
code/notebooks/: BasicHF.ipynb  Deep_Learning.ipynb  Delaunay copy.ipynb  Delaunay.ipynb  Feature_eng.ipynb  Intro_ML.ipynb  LinearAlgebra.ipynb  Model-Based-Jax.ipynb  Model-Based-Jax.md  Model-Based.ipynb  Model-Based.md  RAG_LLM.ipynb  RAG_LLM.md  TrianPoly.ipynb  chat_nlp_analysis.ipynb  data_vis.ipynb  gpt_api.ipynb  jax.ipynb  jax.md  polygon_analysis.ipynb
code/scripts/: cumult.py  delauney.py  gym_basic.py  main.py  nn_mnist.py
data/processed/: hapax_legomena.csv  sentences_with_rare_words.csv  sentences_with_rare_words_detailed.csv  word_frequencies.csv
data/prompts/: Coding Agents.md
lib_basics/: jax.ipynb
mathmagic/: CirculoMinimo.ipynb  Delaunay.ipynb  RL.ipynb
mathmagic/.ipynb_checkpoints/: LinearAlgebra-checkpoint.ipynb
notes/01-concepts/calculus/: Hessian.md  Integral.md  Jacobian.md
notes/templates/: moc.md  notebook-reference.md  paper-notes.md
(+64 files in other folders)
