[project]
name = "ds-be-like"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax[cuda12]>=0.6.2",
    "jupyter>=1.1.1",
    "jupyter-collaboration>=4.1.1",
    "jupyter-mcp-tools>=0.1.4",
    "matplotlib>=3.10.3",
    "nbconvert[webpdf]>=7.16.6",
    "notebook>=7.4.4",
    "numpy>=2.1.3",
    "pandas>=2.3.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
    "torch>=2.0.1",
    "torchaudio>=2.0.2",
    "torchvision>=0.15.2",
]
