[project]
name = "ds-be-like"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "folium>=0.20.0",
    "gymnasium[toy-text]>=1.2.2",
    "jax[cuda12]>=0.6.2",
    "jupyter>=1.1.1",
    "jupyter-collaboration>=4.1.1",
    "jupyter-mcp-tools>=0.1.4",
    "langchain>=1.2.0",
    "langgraph>=1.0.5",
    "matplotlib>=3.10.3",
    "nbconvert[webpdf]>=7.16.6",
    "nltk>=3.9.2",
    "notebook>=7.4.4",
    "numpy>=2.1.3",
    "optimum[onnxruntime]>=1.17.1",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
    "tf-keras>=2.19.0",
    "torch>=2.9.0",
    "torchaudio>=2.2.0",
    "torchvision>=0.15.2",
    "transformers>=4.57.1",
]
